--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "sass": "^1.70.0",
     "simplebar": "^6.2.5",
     "web-vitals": "^2.1.4"
   },
